@@ -49,7 +49,7 @@
     "bank = obsplus.EventBank(event_path)\n",
     "\n",
     "# ensure index is up-to-date\n",
-    "bank.update_index() "
+    "bank.update_index()"
    ]
   },
   {
@@ -84,6 +84,29 @@
    "outputs": [],
    "source": [
     "print(index.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are working from a data directory that doesn't have write access, you can specify a custom location for the index path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "index_path = Path(tempfile.mkdtemp()) / \"index.db\"\n",
+    "cust_ind_bank = obsplus.EventBank(event_path, index_path=index_path)\n",
+    "cust_ind_bank.update_index()\n",
+    "ind = cust_ind_bank.read_index()\n",
+    "ind  # Note that paths in the index are relative to event_path"
    ]
   },
   {
@@ -213,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
