@@ -86,6 +86,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Using a custom index path\n",
+    "\n",
+    "If you are working from a data directory that doesn't have write access, you can specify a custom location for the index path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "index_path = Path(tempfile.mkdtemp()) / \"index.h5\"\n",
+    "cust_ind_bank = obsplus.WaveBank(crandall_path, index_path=index_path)\n",
+    "cust_ind_bank.update_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Get waveforms\n",
     "\n",
     "The files can be retrieved from the directory with the `get_waveforms` method. This method has the same signature as the ObsPy client `get_waveform` methods so they can be used interchangeably:"
@@ -344,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
